# tabit-worker

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
tabit_worker/: __main__.py  audio.py  cli.py  conversion.py  fretboard.py  models.py  musicxml.py  pitch.py  quantize.py  sender.py  tempo.py  transcription.py  worker.py
